# owith

./: Pipfile  README.md  mypy.ini  pytest.ini  setup.cfg
.github/workflows/: pytest.yaml
owith/: __init__.py  owith.py  validation.py
tests/: context_managers.py  test_owith.py  test_valiation.py
