[metadata]
name = owith
version = attr: owith.__version__
license_files = LICENSE
author = hmasdev
author_email = hmasuidev1com@gmail.com
url = http://github.com/hmasdev/owith
description = OWith: one liner `with`
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    with
    one liner
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:

tests_require = 
    pytest>=6.0
    pytest-cov>=2.10
    flake8>=3.8
    mypy>=0.900

[options.packages.find]
exclude =
    tests*